Add spring update 2018

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-	<header class="site-header" id="top">
+	<header class="site-header" id="top" role="banner">
 		<a class="site-title" href="{{ site.baseurl }}/">Michèle.nl</a>
 		<nav class="site-nav">
 			{% assign current = page.url | downcase | split: '/' %}
