--- a/_sass/components/_animations.scss
+++ b/_sass/components/_animations.scss
@@ -1,13 +1,14 @@
-/* CSS Keyframe Animations
----------------------------------*/
+/**
+ * CSS Keyframe Animations
+ */
 @keyframes slide-up {
-	0% 		{ transform: translate3d(0, 100%, 0); opacity: 0; }
-	100%	{ transform: none; opacity: 1; }
+    0%      { transform: translate3d(0, 100%, 0); opacity: 0; }
+    100%    { transform: none; opacity: 1; }
 }
 
 // used for timeline dots
 @keyframes scale-in {
-	0% 		{ transform: scale(0); }
-	40% 	{ transform: scale(1.2); }
-	100% 	{ transform: scale(1); }
+    0%      { transform: scale(0); }
+    40%     { transform: scale(1.2); }
+    100%    { transform: scale(1); }
 }
