--- a/_sass/utilities/_helpers.scss
+++ b/_sass/utilities/_helpers.scss
@@ -3,20 +3,20 @@
 
 // clearfix
 %clearfix {
-	&:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
+    &:after {
+        content: '';
+        display: table;
+        clear: both;
+    }
 }
 
 // screenreader text
 .screenreader {
-	clip: rect(1px 1px 1px 1px); /* IE 6/7 */
-	clip: rect(1px, 1px, 1px, 1px);
-	width: 1px;
-	height: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap; /* added line */
+    clip: rect(1px 1px 1px 1px); /* IE 6/7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
 }
