--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
-	<a href="#top" class="back-to-top"><span class="screenreader">Laat de pagina weer naar boven scrollen</span></a>
-	<footer class="site-footer">
+	<a href="#top" class="back-to-top" aria-label="Terug naar boven">
+        <span class="screenreader">Laat de pagina weer naar boven scrollen</span>
+    </a>
+	<footer class="site-footer" role="content-info">
 		<span aria-hidden="true">{{ site.title }} / 20{{ site.time | date: '%y' }}</span>
-		<a href="http://blog.michele.nl" aria-label="Bezoek het blog van Michèle">Blog</a>
-		<a href="https://github.com/MicheleNL/2016-website/issues" aria-label="Meld een bug op GitHub">Report Bug</a>
+		<a href="https://blog.michele.nl" aria-label="Blog van Michèle">Blog</a>
+		<a href="https://github.com/MicheleNL/2016-website/issues" aria-label="Meld bugs op GitHub">Report Bug</a>
 	</footer>
