--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -1,41 +1,36 @@
-/* Webfonts
----------------------------------*/
+/**
+ * Webfonts
+ */
+
+// Circular Book
+@font-face {
+    font-family: 'Circular Book';
+    font-display: optional;
+    src: url('/assets/fonts/circular-book.woff2') format('woff2'),
+         url('/assets/fonts/circular-book.woff') format('woff'),
+         url('/assets/fonts/circular-book.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 // Circular Bold
 @font-face {
-	font-family: 'Circular Bold';
-	src: url('/assets/fonts/circular-bold.woff2') format('woff2'),
-		 url('/assets/fonts/circular-bold.woff') format('woff'),
-		 url('/assets/fonts/circular-bold.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'Circular Bold';
+    font-display: optional;
+    src: url('/assets/fonts/circular-bold.woff2') format('woff2'),
+         url('/assets/fonts/circular-bold.woff') format('woff'),
+         url('/assets/fonts/circular-bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 // Circular Black
 @font-face {
-	font-family: 'Circular Black';
-	src: url('/assets/fonts/circular-black.woff2') format('woff2'),
-		 url('/assets/fonts/circular-black.woff') format('woff'),
-		 url('/assets/fonts/circular-black.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-// Karla Regular 
-@font-face {
-	font-family: 'Karla Regular';
-	src: url('/assets/fonts/karla-regular.woff2') format('woff2'),
-		 url('/assets/fonts/karla-regular.woff') format('woff'),
-		 url('/assets/fonts/karla-regular.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-// Karla Italic
-@font-face {
-	font-family: 'Karla Italic';
-	src: url('/assets/fonts/karla-italic.woff2') format('woff2'),
-		 url('/assets/fonts/karla-italic.woff') format('woff'),
-		 url('/assets/fonts/karla-italic.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'Circular Black';
+    font-display: optional;
+    src: url('/assets/fonts/circular-black.woff2') format('woff2'),
+         url('/assets/fonts/circular-black.woff') format('woff'),
+         url('/assets/fonts/circular-black.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
