--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -2,62 +2,66 @@
 ---------------------------------*/
 button,
 [role=button] {
-	$arrow-width: 1.5em;
-	position: relative;
-	display: inline-block;
-	border: 0.09rem solid $text-color;
-	border-radius: 1.25em;
-	font-family: $font-sans-serif-black;
-	font-size: 0.96em;
-	font-weight: normal;
-	line-height: 2;
-	color: $text-color;
-	padding: 0.15em 1.5em 0.3em 1.5em;
-	cursor: pointer;
-	text-transform: lowercase;
-	margin-bottom: 1.5em;
-	transition: padding 0.3s;
+    $arrow-width: 1.5em;
+    position: relative;
+    display: inline-block;
+    border: .09rem solid $text-color;
+    border-radius: 1.5em;
+    font-family: $font-sans-serif-bold;
+    font-size: 0.96em;
+    font-weight: normal;
+    line-height: 2;
+    text-decoration: none;
+    color: $text-color;
+    padding: .3em 1.5em .3em;
+    cursor: pointer;
+    margin-bottom: 1.5em;
+    transition: padding .3s;
 
-	.js & {
-		padding: 0.15em 4em 0.3em 1.5em;
-	}
+    &::first-letter {
+        text-transform: lowercase;
+    }
 
-	@include breakpoint(sm){
-		// quantity query: apply margin if > 1 button
-		&:nth-last-child(n+2),
-		&:nth-last-child(n+2) ~ [role=button] {
-			margin-right: 0.7em;
-		}
-	}
+    .js & {
+        padding: .3em 4em .3em 1.5em;
+    }
 
-	@include hocus {
-		padding-left: 2.75em;
-		padding-right: 2.75em;
+    @include breakpoint(sm){
+        // quantity query: apply margin if > 1 button
+        &:nth-last-child(n+2),
+        &:nth-last-child(n+2) ~ [role=button] {
+            margin-right: .7em;
+        }
+    }
 
-		svg {
-			opacity: 0;
-			transform: translateX($arrow-width);
-		}
-	}
+    @include hocus {
+        padding-left: 2.75em;
+        padding-right: 2.75em;
 
-	// reset content link style
-	&:before {
-		content: none;
-	}
+        svg {
+            opacity: 0;
+            transform: translateX($arrow-width);
+        }
+    }
 
-	svg {
-		width: $arrow-width;
-		position: absolute;
-		top: 0.4em;
-		right: 0;
-		fill: currentColor;
-		transform: translateX(-$arrow-width);
-		transition: transform 0.3s, opacity 0.3s;
-	}
+    // reset content link style
+    &:before {
+        content: none;
+    }
 
-	// inverted colored button
-	&.inverted {
-		border-color: white;
-		color: white;
-	}
+    svg {
+        width: $arrow-width;
+        position: absolute;
+        top: .4em;
+        right: 0;
+        fill: currentColor;
+        transform: translateX(-$arrow-width);
+        transition: transform .3s, opacity .3s;
+    }
+
+    // inverted colored button
+    &.inverted {
+        border-color: $white;
+        color: $white;
+    }
 }
