--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
-@charset "utf-8";
+@charset 'utf-8';
 
-@import "utilities/*";
-@import "base/*";
-@import "components/*";
-@import "modules/*";
+@import 'utilities/*';
+@import 'base/*';
+@import 'components/*';
+@import 'modules/*';
