--- a/_sass/modules/_site-footer.scss
+++ b/_sass/modules/_site-footer.scss
@@ -1,75 +1,65 @@
 /* The main footer
 ------------------------------*/
 .site-footer {
-	clear: both;
-	background: $gray-lighter;
-	padding: $gutter-sm;
-	font-family: $font-sans-serif-bold;	
-	font-size: 1em;
+    clear: both;
+    padding: $gutter-md $gutter-sm;
+    font-family: $font-sans-serif-bold;
+    font-size: .75em;
 
-	@include breakpoint(md) {
-		padding-left: $gutter-md;
-		padding-right: $gutter-md;
-	}
+    @include breakpoint(md) {
+        padding-left: $gutter-md;
+        padding-right: $gutter-md;
+    }
 
-	@include breakpoint(lg) {
-		padding-left: $gutter-lg;
-		padding-right: $gutter-lg;
-	}
-}
-
-// disclaimer
-.site-footer span {
-	display: none;
-
-	@include breakpoint(sm) {
-		display: inline-block;
-	}
+    @include breakpoint(lg) {
+        padding-left: $gutter-lg;
+        padding-right: $gutter-lg;
+    }
 }
 
 .site-footer a {
-	color: lighten($gray-dark, 20%);
-	margin-left: 1.2em;
+    margin-left: 1.2em;
+    color: $accent-color;
 
-	@include breakpoint(sm) {
-		margin-left: 2em;
-	}
+    @include breakpoint(sm) {
+        margin-left: 2em;
+    }
 
-	@include breakpoint(lg) {
-		margin-left: 3em;
-	}
+    @include breakpoint(lg) {
+        margin-left: 3em;
+    }
 
-	@include hocus {
-		color: lighten($gray-dark, 25%);
-	}
+    @include hocus {
+        color: lighten($accent-color, 25%);
+    }
 }
 
 .back-to-top {
-	display: none; // hide intially
-	height: 2.5em;
-	width: 2.5em;
-	line-height: 2.5em;
-	color: lighten($text-color, 15%);
-	border: 0.09rem solid;
-	border-radius: 50%;
-	text-align: center;
-	z-index: 999;
-	position: fixed;
-	bottom: 0.8em;
-	right: $gutter-sm;
+    display: none; // hide intially
+    z-index: 999;
+    position: fixed;
+    bottom: .8em;
+    right: $gutter-sm;
+    width: 2.5em;
+    height: 2.5em;
+    color: lighten($text-color, 15%);
+    line-height: 2.5em;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 50%;
 
-	@include breakpoint(md) {
-		right: $gutter-md;
-	}
+    @include breakpoint(md) {
+        right: $gutter-md;
+    }
 
-	@include breakpoint(lg) {
-		right: $gutter-lg;
-	}
+    @include breakpoint(lg) {
+        right: $gutter-lg;
+    }
 }
 
 .back-to-top svg {
-	transform: rotate(-90deg);
-	vertical-align: middle;
-	width: 1.5em;
-	fill: currentColor;
+    transform: rotate(-90deg);
+    vertical-align: middle;
+    width: 1.5em;
+    fill: currentColor;
 }
