--- a/_sass/modules/_social-media-list.scss
+++ b/_sass/modules/_social-media-list.scss
@@ -1,56 +1,56 @@
 /* Social Media list with icons
 --------------------------------*/
 .social-media-list {
+	margin: 3em auto 0;
 	list-style: none;
-	margin: 3em auto 0 auto;
-	
-	li {
-		display: inline-block;
-	}
+	text-align: center;
+}
 
-	a {	
-		position: relative;
-		display: flex;
-		align-items: center;
-		height: 2.5em;
-		width: 2.5em;
-		background: white;
-		color: $text-color;
-		margin: 0.3em;
-		padding: 0;
-		border: 0.09rem solid $text-color;
-		border-radius: 1.25em;
-		cursor: pointer;
-		will-change: transform, color;
+.social-media-list li {
+	display: inline-block;
+}
 
-		&:before {
-			content: "";
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			border-radius: 50%;
-			background: $text-color;
-			opacity: 0;
-		}
+.social-media-list a {
+	position: relative;
+	display: flex;
+	align-items: center;
+	height: 2.5em;
+	width: 2.5em;
+	background: white;
+	color: $accent-color;
+	margin: .3em;
+	padding: 0;
+	border: 2px solid $accent-color;
+	border-radius: 1.25em;
+	cursor: pointer;
+	will-change: transform, color;
 
-		@include hocus {
-			color: white;
-			transition: color 0.15s 0.1s, transform 0.15s;	
-			
-			&:before {
-				opacity: 1;	
-				transform: translateY(0);
-				transition: opacity 0.4s;	
-			}
+	@include hocus {
+		color: $white;
+		transition: color .15s, transform .15s;
+
+		&::before {
+			opacity: 1;
+			transform: translateY(0);
+			transition: opacity .4s;
 		}
 	}
+}
+.social-media-list a::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: $accent-color;
+	border-radius: 50%;
+	opacity: 0;
+}
 
-	svg {
-		width: 2.3em;
-		height: auto;
-		max-height: 1em;
-		margin: 0 auto;
-		vertical-align: center;
-		fill: currentColor;
-	}
+.social-media-list a > svg {
+	width: 2.3em;
+	height: auto;
+	max-height: 1em;
+	margin: 0 auto;
+	vertical-align: center;
+	fill: currentColor;
 }
